[tool.poetry]
name = "symphony"
version = "0.1.0"
description = ""
authors = ["Your Name <orlevi128@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.0"
click = "^7.1.2"
ntplib = "^0.3.4"
python3-midi = "^0.2.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
symphony_server = 'symphony.server:cli'
symphony_client = 'symphony.client:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
